src/objects/Customers__c.object
<CustomObject>
    <fields>
        <fullName>Begins_With__c</fullName>
        <formula>BEGINS( LOWER( Name ), &apos;test&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Begins With</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Browser_More_Details__c</fullName>
        <formula>HYPERLINK(&apos;https://www.google.com/search?q=&apos;+Retail_Shop__r.Name , &apos;Search&apos; , &apos;_self&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Browser More Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Celed_Value__c</fullName>
        <formula>CEILING( Current__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Celed Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contains__c</fullName>
        <formula>CONTAINS( LOWER( Name ), &apos;test&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contains</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <globalPicklist>Country</globalPicklist>
        <label>Country</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Location__c</fullName>
        <label>Current Location</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Current_Time__c</fullName>
        <defaultValue>TIMENOW()</defaultValue>
        <label>Current Time</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <label>Current Value</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Customer_Email__c</fullName>
        <label>Customer Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Customer_Phone__c</fullName>
        <label>Customer Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Customer_Status__c</fullName>
        <label>Customer Status</label>
        <picklist>
            <picklistValues>
                <fullName>Joined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Suspended from Subscription</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Removed from Subscription</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deactivate the Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re Joined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOJ__c</fullName>
        <label>Date of Joining</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DateTimeValue__c</fullName>
        <formula>DATETIMEVALUE(NOW())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DateTimeValue</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Day_of_Joining_Text__c</fullName>
        <formula>Case ( WEEKDAY( DOJ__c ) , 1 , &apos;Sunday&apos; , 2 , &apos;Monday&apos; , 3 , &apos;Tuesday&apos; , &apos;No Matching day is selected&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Day of Joining(Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Destination_Location__c</fullName>
        <label>Destination Location</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Distance__c</fullName>
        <formula>DISTANCE( Current_Location__c ,  Destination_Location__c , &apos;km&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distance(in KM)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Eighteen_Difi_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eighteen Difi ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Find__c</fullName>
        <formula>FIND(&apos;test&apos;, LOWER( Name ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Find</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Flored_Value__c</fullName>
        <formula>FLOOR( Current__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Flored Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GeoLocation__c</fullName>
        <formula>TEXT(Current_Location__Latitude__s)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GeoLocation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <formula>IMAGE(&apos;/resource/1540440109000/AnilKumblesImage&apos;, &apos;No Image&apos; , 200, 200)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Aniversery__c</fullName>
        <formula>AND( DAY( TODAY() ) == DAY( DOJ__c ) , MONTH( TODAY() ) == MONTH( DOJ__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Aniversery</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Salary_Blank__c</fullName>
        <formula>BLANKVALUE( TEXT(Subscription_Type__c) , &apos;No Subscription Type is Selected&apos;)</formula>
        <label>Is Salary Blank?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MCeled_Value__c</fullName>
        <formula>MCEILING( Current__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MCeled Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MFlored_Value__c</fullName>
        <formula>MFLOOR( Current__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MFlored Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Monthly_Income__c</fullName>
        <label>Monthly Income</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>New_Notification_Sent_Date__c</fullName>
        <label>New Notification Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Outlet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outlet</label>
        <referenceTo>Outlet__c</referenceTo>
        <relationshipLabel>Customer</relationshipLabel>
        <relationshipName>Customer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pincode__c</fullName>
        <label>Pincode</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Re_Activate_After_Suspension__c</fullName>
        <label>Re Activate After Suspension</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Renewal_Date__c</fullName>
        <formula>ADDMONTHS( DOJ__c , IF(TEXT( Subscription_Type__c ) == &apos;Monthly&apos;, 1, ( IF( TEXT( Subscription_Type__c ) == &apos;Quarterly&apos;,3,0 ) ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retail_Shop__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Retail Shop</label>
        <referenceTo>Retail_Shop__c</referenceTo>
        <relationshipLabel>Customer</relationshipLabel>
        <relationshipName>Customer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rounded_Off_Value__c</fullName>
        <formula>ROUND(Current__c ,2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rounded Off Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Session_Id__c</fullName>
        <label>Session Id</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Session_Id_txt__c</fullName>
        <formula>GETSESSIONID()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Session Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Type__c</fullName>
        <inlineHelpText>Monthly means only for 1 month.
Quarterly : 3 months
Yearly : 8 months
Unlimited : 48 Months</inlineHelpText>
        <label>Subscription Type</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlimited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yearly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TimeValue__c</fullName>
        <formula>TIMENOW()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TimeValue</label>
        <type>Time</type>
    </fields>
    <fields>
        <fullName>Time_Formula__c</fullName>
        <formula>MINUTE( Current_Time__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Customer__c</fullName>
        <label>Type of Customer</label>
        <picklist>
            <picklistValues>
                <fullName>Diamond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>is_Subscription_Quarterly__c</fullName>
        <formula>ISPICKVAL(Subscription_Type__c, &apos;Quarterly&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>is Subscription Quarterly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_Text_Check__c</fullName>
        <formula>ISNUMBER(Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>is Text Check</label>
        <type>Checkbox</type>
    </fields>
    <label>Customer</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Customers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customer</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Age_Validation_on_Customer_DOB</fullName>
        <active>true</active>
        <description>Customers with Age below 18 cannot create record.</description>
        <errorConditionFormula>AND( ISNEW() , (YEAR(TODAY()) - YEAR(DOB__c)) &lt; 18 )</errorConditionFormula>
        <errorMessage>Customer&apos;s DOB should be &gt;= 18</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Date_of_Joining_Validation</fullName>
        <active>true</active>
        <description>DOJ can be today or Grater than today.</description>
        <errorConditionFormula>DOJ__c  &lt; TODAY()</errorConditionFormula>
        <errorDisplayField>DOJ__c</errorDisplayField>
        <errorMessage>Date of Joining Cannot be Less than today.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Make_Subscription_Type_as_Blank</fullName>
        <active>true</active>
        <description>To make sure we are blanking out the subscription Type to blank once the customer goes inactive.</description>
        <errorConditionFormula>AND(PRIORVALUE( IsActive__c ),NOT( ISPICKVAL(Subscription_Type__c, &apos;&apos;)), IsActive__c == false)</errorConditionFormula>
        <errorMessage>Please reset the Subscription Type to blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Making_Subscription_Type_Mandatory</fullName>
        <active>true</active>
        <description>Make the Subscription Type as Mandatory when the Customer is Active</description>
        <errorConditionFormula>AND ( IsActive__c  ,ISPICKVAL( Subscription_Type__c , &apos;&apos; ))</errorConditionFormula>
        <errorMessage>Please choose a Value in Subscription Type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandate_Reactivation_Date</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( ISCHANGED( Customer_Status__c ) ,  ISPICKVAL(Customer_Status__c , &apos;Suspended from Subscription&apos;) , ISBLANK( Re_Activate_After_Suspension__c ) )</errorConditionFormula>
        <errorMessage>Please Enter the Re Activation Date for Suspended Customer</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pin_code_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>if(
     TEXT(Country__c) == &apos;US&apos;,
            NOT(REGEX(Pincode__c, &quot;\\d{5}(-\\d{4})?&quot;)),
     if(TEXT(Country__c) == &apos;India&apos;,
            NOT(REGEX(Pincode__c, &quot;\\d{6}&quot;)),
     if(TEXT(Country__c) == &apos;Canada&apos;,
            NOT(REGEX(Pincode__c,
	&quot;((?i)[ABCEGHJKLMNPRSTVXY]\\d[A-Z]?\\s?\\d[A-Z]\\d)?&quot;)),
false))
)</errorConditionFormula>
        <errorMessage>Please enter Valid Pin code.</errorMessage>
    </validationRules>
</CustomObject>